<resources>
    <string name="app_name">Timetable</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="edit_period_name">Period Name</string>
    <string name="welcome_text">Welcome, To the Timetable App</string>
    <string name="action_create">Create</string>
    <string name="action_settings">Settings</string>
    <string name="action_signout">Sign Out</string>
    <string name="next">Next</string>
    <string name="teacher">Teacher</string>
    <string name="student">Student</string>
    <string name="choice_text">Login As</string>
    <string name="starttime">Start Time</string>
    <string name="endtime">End Time</string>
    <string name="pick_time">Pick TIme</string>
    <string name="edit_teacher_name">Teacher Name</string>
    <string name="create">Create</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="edit_place_text">Place</string>

    <!-- About String-->
    <string name="About_page">
        <b>EaSy</b> is the most beautiful and intuitive app for managing your school or university life.
        Save your timetable once, because <b>EaSy</b> syncs across all your Android devices.
    </string>

</resources>
