<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.msa.timetable.Activities.InputActivity"
   >

    <android.support.v7.widget.Toolbar
        android:id="@+id/createtoolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

    <com.goodiebag.horizontalpicker.HorizontalPicker
        android:id="@+id/daypicker"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        app:backgroundSelector="@drawable/hpicker_background"
        app:itemHeight="52dp"
        app:itemMargin="16dp"
        app:itemWidth="55dp"
        app:textColorSelector="@color/white"
        app:textSize="18sp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:text="@string/starttime"
                android:textColor="@color/textColor"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/starttimetext"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="00:00 AM"
                android:textColor="@color/colorPrimary"
                android:textSize="24sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/endtime"
                android:textColor="@color/textColor"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/endtimestart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="00:00 AM"
                android:textColor="@color/colorPrimary"
                android:textSize="24sp" />

        </LinearLayout>
    </LinearLayout>



    <LinearLayout
        android:id="@+id/theoryperiod"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="vertical"
        android:paddingLeft="10dp"
        android:paddingRight="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="16dp"
                android:layout_height="16dp"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:src="@drawable/feed" />

            <EditText
                android:id="@+id/periodname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/edit_period_name"
                android:textColor="@color/textColor"
                android:textColorHint="@color/texthintColor"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="16dp"
                android:layout_height="16dp"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:src="@drawable/profile" />

            <EditText
                android:id="@+id/teachertextinput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/edit_teacher_name"
                android:textColorHint="@color/texthintColor"
                android:textColor="@color/textColor"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="16dp"
                android:layout_height="16dp"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:src="@drawable/places" />

            <EditText
                android:id="@+id/placetextinput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/edit_place_text"
                android:textColorHint="@color/texthintColor"
                android:textColor="@color/textColor"/>
        </LinearLayout>

    </LinearLayout>

</LinearLayout>
